VDR Plugin 'xineliboutput' Revision History
-------------------------------------------

2006-10-20: Version 1.0.0pre6

- Display Audio track languages when replaying DVDs
- Display DVD SPU track language names instead track numbers
- Improved shortcut key support
- Fixed garbage in bottom of image when using autocrop
- Fixed SCR tunning when only one TCP/PIPE client
- Fixed unscaled OSD scaling to display size when low-resolution video or
  different aspect ratio
- Allow overriding default startup image
- German translations (Thanks to Udo Richter)
- Setup menu re-arranged
- Command-line given post plugin parameters are never changed at runtime
- Added string length checks to several places
- Added missing frame buffer device selection
- Support for ffmpeg post processing
- Easier configuration for tvtime post plugin in menu
- Autoplay list support for xine (patch from sf feature request #1561688)
- Removed busy loop from vdr-fbfe/vdr-sxfe when console was unavailable

2006-09-17: Version 1.0.0pre5

- Allow overriding default no signal image
- Several fixes to post plugin handling
- Fixed --audio=driver:port parsing in vdr plugin
- Fixed overscan when image does not fill whole output window
  (bug #1556912)
- Implemented simple MMX/SSE and YUY2 detection routines 
  to autocrop
- Main menu re-arranged (Thanks to Petri Helin)
- Fixed display blanking aspect ratio (bug #1554070)
- Lirc receiver accepts shorter LIRC commands (bug #1540896)
- Fixed immediate re-configuration when setup entries are 
  changed with repeated keys (Thanks to Petri Helin)
- Implemented audio channel selection as xine post plugin
  (to select only left or right channel from stereo)
- Several minor fixes / enhancements to autocrop plugin

2006-09-06: Version 1.0.0pre4

- WARNING: updated command-line options !
- Support for HD (larger buffers with HD content)
- Simple playlist support to media player
- Fixed starting replay of new file while old file is still playing